syntax = "proto3";

package blog;

option go_package = "github.com/nuxzero/grpc-go-course/blog/proto";

import "google/protobuf/empty.proto";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message BlogId {
  string id = 1;
}

service BlogService {
  // gRPC cannot return string, so we need to create a wrapper message
  rpc CreateBlog(Blog) returns (BlogId);
  rpc ReadBlog(BlogId) returns (Blog);
  // It not necessary to return Blog message here, so we can use google.protobuf.Empty to return nothing
  rpc UpdateBlog(Blog) returns (google.protobuf.Empty);
  rpc DeleteBlog(BlogId) returns (google.protobuf.Empty);
  rpc ListBlogs(google.protobuf.Empty) returns (stream Blog);
}